--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rytham Bhagat — Web Developer</title>
   <meta name="description" content="Portfolio of Rytham Bhagat — Web Developer focused on building products. Enthusiastic about Backend Development. Skills: HTML, CSS, TailwindCSS, JavaScript, Python, C, C++." />
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
   <div class="bg-decor" aria-hidden="true"></div>
@@ -39,7 +39,7 @@
         <div class="hero-photo">
           <!-- Place your portrait image at: LEVEL 1/Task 2 - Personal Portfolio/src/assets/profile.jpg -->
           <figure class="avatar">
-            <img src="styles/My Pic.jpg" alt="Portrait of Rytham Bhagat" />
+            <img src="My Pic.jpg" alt="Portrait of Rytham Bhagat" />
           </figure>
         </div>
       </div>
@@ -127,4 +127,5 @@
     </div>
   </footer>
 </body>
+
 </html> 
