--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rytham Bhagat — Data Scientist & AI ML Engineer</title>
   <meta name="description" content="Portfolio of Rytham Bhagat — Aspiring Data Scientist and AI ML Engineer. Skills: Python, HTML, CSS, TailwindCSS, JavaScript, C, C++." />
-  <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <script>
   // Set default theme to dark
@@ -282,3 +282,4 @@
   </script>
 </body>
 </html> 
+
