--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="hero-photo">
           <!-- Place your portrait image at: LEVEL 1/Task 2 - Personal Portfolio/src/assets/profile.jpg -->
           <figure class="avatar">
-            <img src="styles/My Pic.jpg" alt="Portrait of Rytham Bhagat" />
+            <img src="My Pic.jpg" alt="Portrait of Rytham Bhagat" />
           </figure>
         </div>
       </div>
@@ -282,4 +282,5 @@
   </script>
 </body>
 </html> 
+
 
